fix gap

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -32,7 +32,7 @@
     }
     
     .wrapped-pokemon-list {
-        @apply grid grid-cols-1 gap-6 bg-stone-100 rounded-3xl m-2 p-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4
+        @apply grid grid-cols-1 gap-11 bg-stone-100 rounded-3xl m-2 p-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4
     }
 
     .wrapped-header {
@@ -56,7 +56,7 @@
     }
 
     .base-card {
-        @apply flex flex-col w-52 justify-around items-center rounded-3xl m-auto
+        @apply flex flex-col w-56 justify-around items-center rounded-3xl m-auto
     }
 
     .base-dialog-external-background {
